--- a/readr.html
+++ b/readr.html
@@ -1,47 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shelfd</title>
-    <link href="./resources/css/readr.css" type="text/css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="./resources/css/codecademyproject.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
-    <img id="logo" src="./resources/css/images/logo.png">
+  <header>
     <nav>
-        <h1 id="logo-name">readr</h1>
-        <ul id="nav">
-            <li>home</li>
-            <li>profile</li>
-            <li>explore</li>
-            <li>bookmarks</li>
-            <li>settings</li>
-        </ul>
+      <h2 id="logo">readr</h2>
+      <ul>
+        <li>catalog</li>
+        <li>authors</li>
+        <li>about us</li>
+      </ul>
     </nav>
-    <div class="bg">
-        <img src="./resources/css/images/try10.png" alt="">
-    </div>    
-    <main>    
-        <section class="describe">
-            <h2>All of your books and friends, In one place</h2>
-            <p>Readr is a social media app designed for bookworms and avid readers.  With a sleek and intuitive interface, Readr provides an immersive reading experience with features such as personalized recommendations, bookmarking, and messaging. Whether you're looking for your next favorite novel or want to engage in lively discussions about literature, Readr has something for every book lover.</p>
-        </section>
-        <section class="ideas">
-            <h2>Connect, Share, Dive in</h2>
-            <p>Share your reading progress and opinions on books you're currently reading.
-                Discover new books and articles through personalized recommendations based on your reading history and interests.
-                Connect with other readers who share similar interests and engage in discussions about your favorite books and authors.
-                Create and join reading groups where you can discuss books with other members and participate in group readings.
-               </p>
-        </section>
-        <footer>
-            <ul id="contact">
-                <li><h3>Download</h3></li>
-                <li><h3>About</h3></li>
-                <li><h3>Contact</h3></li>
-            </ul>
-        </footer>
-    </main>
+  </header>
+  <main class="grid">
+    <section class="banner">
+      <div class="banner-card">
+        <h1>readr</h1>
+        <h2>friends, books, authors, in one place</h2>
+       </div> 
+      </section>
+      </section>
+    </section>
+    <section class="mission">
+      <h3>Our Goal</h3>
+      <p>At Readr, our mission is to empower individuals and communities through the power of social media. We are committed to creating a platform that inspires people to learn, connect, and engage with the world around them. Our goal is to provide a safe and inclusive space where users can discover and share ideas, stories, and perspectives, and where diverse voices and opinions are celebrated. By fostering a culture of curiosity, compassion, and collaboration, we aim to create a positive impact on society and help shape a more informed and enlightened world.</p>
+    </section>
+    <section class="team">
+      <h3>Meet the Team</h3>
+      <div class="container grid">
+        <div class="card" id="one">
+          <img src="./resources/css/images/IMG_4260.JPG">
+          <h4>Kevin Troy</h4>
+          <h5>Founder, CEO, Lead Developer</h5>
+        </div>
+        <div class="card" id="two">
+          <img src="./resources/css/images/IMG_4444.JPG">
+          <h4>Sahar Ramahi</h4>
+          <h5>VP, Senior Engineer</h5>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="contact">
+        <ul>
+          <li id="email">readr@gmail.com</li>
+          <li>17345 w 81st st. NY, NY</li>
+          <li>Sign Up</li>
+        </ul>
+      </div>
+      <h6>2022 by Kevin Troy, Inc</h6>
+    </footer>
+  </main>
 </body>
 </html>
